Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2159

Folded code idented with tabs is deleted on save

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 2.0.1
    • Qt Creator 2.0.0, Qt Creator 2.0.1
    • Editors
    • None
    • 6efdc7cff0937efeea89a5f98df725a08f1c70a2

      This is a scaring issue that will eat your code when you won't notice....

      Steps to reproduce:

      1. Create or open any cpp file. Qt Creator must be configured to insert tabs, and not spaces, for identation.

      2. Type something like this:

      void foo() {
      	int bar; //<- idented with a tab
      }
      

      3. Fold the foo function, then save the file... The body of the function is gone...

      Tested on Windows 7 64 bits with Qt Creator 2.0.1 (Pre-2.0.1) - Built on Aug 18 2010 at 02:03:27 - From revision fee9647f89

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mae mae
            gregschlom Gregory Schlomoff
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes