Fix: Folded code is deleted on save

Also fixes a crash when folding code at the very end
of the document

Task-number: QTCREATORBUG-2159